--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<meta content="width=device-width, initial-scale=1" name="viewport" />
-
+		<meta charset="utf-8">
+		<meta content="width=device-width, initial-scale=1" name="viewport">
 		%svelte.head%
 	</head>
 
