--- a/static/preview-samples/index.html
+++ b/static/preview-samples/index.html
@@ -9,6 +9,8 @@
 <body>
 <h1>Hello World!</h1>
 <p>This is my first website.</p>
+<a href="https://discord.gg/files">
 <button>Look at this cool button!</button>
+</a>
 </body>
 </html>
