--- a/static/preview-samples/index.html
+++ b/static/preview-samples/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Hello World!</h1>
 <p>This is my first website.</p>
-<a href="https://discord.gg/files">
+<a href="https://discord.gg/files" target="_blank" rel="noopener noreferrer">
 <button>Look at this cool button!</button>
 </a>
 </body>
