chore(deps): updated sveltekit (& other deps) to the latest version feat: did a bunch of refactoring (made possible by new SK features)
Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta content="width=device-width, initial-scale=1" name="viewport">
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 
 	<body class="scroller">
-		%svelte.body%
+	%sveltekit.body%
 	</body>
 </html>
