--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="%lang%" dir="%dir%">
 	<head>
 		<meta charset="utf-8" />
@@ -6,7 +6,7 @@
 		%sveltekit.head%
 	</head>
 
-	<body class="scroller">
+	<body>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
