--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		%sveltekit.head%
 	</head>
 
-	<body>
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
